change text alignment (fixes #3062)

--- a/src/app/users/users-achievements/users-achievements.scss
+++ b/src/app/users/users-achievements/users-achievements.scss
@@ -1,5 +1,4 @@
 .achievements-container {
-  text-align: center;
   max-width: 800px;
   margin: 0 auto;
 }
